minor changes to homepage and user overview page in styling

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -32,11 +32,11 @@
               Mia George, Analyst
           .col-sm-3.col-xs-6.profile
             .text-center
-              = image_tag("/assets/front_page/people/jen.png")
+              = image_tag("/assets/community/overview/julia-wise.png")
             %p
-              "I am the third person to have a quote here as soon as it's sent to Ozzie!"
+              "I support 80,000 Hours because I wish I had been thinking about effective career choice starting a lot earlier. 80,000 Hours is exactly the kind of resource I wish had been around then!"
             %h4
-              Mia George, Analyst
+              Julia Wise, Social Worker
           .col-sm-3.col-xs-6.profile
             .text-center
               = image_tag("/assets/front_page/people/Haydn.png")
