--- a/app/assets/stylesheets/members.css
+++ b/app/assets/stylesheets/members.css
@@ -1,6 +1,6 @@
 .overview .background {
   background-image: url("/assets/community/overview/members-row.png");
-  background: linear-gradient(45deg, #2290af, #10cba5 100%);
+  background: linear-gradient(60deg, #1260cf, #50dbff 100%);
   /* W3C */ }
   .overview .background .members-row-top {
     height: 50px;
@@ -11,8 +11,6 @@
   .overview .background .sliver {
     height: 2px; }
 .overview .cta-section {
-  background: linear-gradient(45deg, #2290af, #10cba5 100%);
-  /* W3C */
   padding: 45px 0 61px 0; }
   .overview .cta-section h1 {
     font-size: 65px;
@@ -43,22 +41,25 @@
         background: rgba(250, 250, 250, 0.2); }
     .overview .cta-section .buttons .cta.primary {
       background: rgba(255, 255, 255, 0.9);
-      color: #377; }
+      color: #025; }
       .overview .cta-section .buttons .cta.primary:hover {
         background: rgba(250, 250, 250, 0.5); }
 .overview .testimonial {
   padding: 52px 0 33px 0;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(220, 240, 240, 0.8);
   box-shadow: inset 0 -2px 1px rgba(50, 50, 50, 0.1); }
   .overview .testimonial .quote {
     padding: 12px 22px 6px 50px;
     background: url("/assets/icons/220-ws.png") left top no-repeat, url("/assets/icons/220-bws.png") bottom right no-repeat; }
+    .overview .testimonial .quote p {
+      font-size: 18px;
+      line-height: 26px; }
   .overview .testimonial h2 {
     font-size: 1.4em;
-    margin-top: 27px;
+    margin-top: 35px;
     margin-left: 50px;
     line-height: 1.4em;
     color: #666; }
   .overview .testimonial img {
-    margin-top: 10px;
+    margin-top: 6px;
     float: right; }
