--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -1,7 +1,7 @@
 .overview{
   .background{
     background-image: url('/assets/community/overview/members-row.png');
-    background: linear-gradient(45deg, #2290af,#10cba5 100%); /* W3C */
+    background: linear-gradient(60deg, #1260cf,#50dbff 100%); /* W3C */
 
     .members-row-top{
       height:50px;
@@ -16,7 +16,6 @@
     }
   }
   .cta-section{
-    background: linear-gradient(45deg, #2290af,#10cba5 100%); /* W3C */
     //background: #306975; /* Old browsers */
     //background-image: url("/assets/front_page/patterns/test-10-large.png");
     padding:45px 0 61px 0;
@@ -55,7 +54,7 @@
       }
       .cta.primary{
         background: rgba(255,255,255,0.9);
-        color: #377;
+        color: #025;
         &:hover{
           background: rgba(250, 250, 250, 0.5);
         }
@@ -65,21 +64,25 @@
 
   .testimonial{
     padding: 52px 0 33px 0;
-    background: rgba(255,255,255,0.7);
+    background: rgba(220,240,240,0.8);
     box-shadow: inset 0 -2px 1px rgba(50,50,50,0.1);
     .quote{
       padding:12px 22px 6px 50px;
       background: url("/assets/icons/220-ws.png") left top no-repeat, url("/assets/icons/220-bws.png") bottom right no-repeat;
+      p{
+        font-size: 18px;
+        line-height: 26px;
+      }
     }
     h2{
       font-size:1.4em;
-      margin-top:27px;
+      margin-top:35px;
       margin-left:50px;
       line-height:1.4em;
       color: #666;
     }
     img{
-      margin-top:10px;
+      margin-top:6px;
       float:right;
     }
   }
