--- a/app/assets/stylesheets/header2.scss
+++ b/app/assets/stylesheets/header2.scss
@@ -17,7 +17,8 @@ src: url("243719_0_0.eot?#iefix") format("embedded-opentype"), url("243719_0_0.w
 /*$magenta_2: #e30068;*/
 header{
   .logo img {
-  max-width: 155px; }
+  max-width: 155px;
+  height: 72px;}
 
   ul.nav{
     margin-top:16px;
