made landing page for members

--- a/app/assets/stylesheets/members.css
+++ b/app/assets/stylesheets/members.css
@@ -63,3 +63,8 @@
   .overview .testimonial img {
     margin-top: 6px;
     float: right; }
+
+.google-form {
+  background: #eee;
+  padding: 4px 4px 0 4px;
+  width: 849px; }
