--- a/app/views/etkh_profiles/landing_page.html.haml
+++ b/app/views/etkh_profiles/landing_page.html.haml
@@ -1,3 +1,14 @@
-%h1 80,000 Hours Members
+.row
+  .col-md-10
+    %h1 Are you interested in using your career for Strategic Good?
 
-<iframe src="https://docs.google.com/forms/d/1Q9QL39ADPH7Mod00Nqnb7_UohjcT0wX-Ll5nlXuY2J0/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    %p We're putting together a collection of examples of people working to do good in the world through their career.  If this sound like you, enter your email below.  
+    %p Our social network is currently mid-redesign, so we'll let you know when it's ready.
+    .google-form
+      <iframe src="https://docs.google.com/forms/d/1Q9QL39ADPH7Mod00Nqnb7_UohjcT0wX-Ll5nlXuY2J0/viewform?embedded=true" width="840" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    %h2 Benefits of Membership
+    %h4 Be an example to the greater community.
+    %h4 Ask for and received advice and feedback.
+    %h4 Find people with similar interests and skillsets near you.
+
+</br>
