--- a/app/views/etkh_profiles/landing_page.html.haml
+++ b/app/views/etkh_profiles/landing_page.html.haml
@@ -1,14 +1,23 @@
 .row
-  .col-md-10
-    %h1 Are you interested in using your career for Strategic Good?
+  .col-md-7
+    %h1 Are you interested in using your career for Effective Impact?
 
-    %p We're putting together a collection of examples of people working to do good in the world through their career.  If this sound like you, enter your email below.  
+    %p We're putting together a collection of examples of people working to do good in the world through their career.  If this sounds like you, enter your email below.  
     %p Our social network is currently mid-redesign, so we'll let you know when it's ready.
+  .col-md-1
+  .col-md-4
+    <div class="fb-facepile" data-app-id="If you want the Facepile to display friends who have connected with your app, specify the App ID here." data-href="https://www.facebook.com/80000Hours" data-action="Comma separated list of action of action types" data-width="300" data-max-rows="1" data-colorscheme="light" data-size="medium" data-show-count="true"></div>
+    </br>
+
+<hr>
+.row
+  .col-md-7
     .google-form
-      <iframe src="https://docs.google.com/forms/d/1Q9QL39ADPH7Mod00Nqnb7_UohjcT0wX-Ll5nlXuY2J0/viewform?embedded=true" width="840" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <iframe src="https://docs.google.com/forms/d/1Q9QL39ADPH7Mod00Nqnb7_UohjcT0wX-Ll5nlXuY2J0/viewform?embedded=true" width="630" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  .col-md-1
+  .col-md-4
     %h2 Benefits of Membership
     %h4 Be an example to the greater community.
     %h4 Ask for and received advice and feedback.
     %h4 Find people with similar interests and skillsets near you.
-
 </br>
