--- a/app/assets/stylesheets/members.css
+++ b/app/assets/stylesheets/members.css
@@ -65,6 +65,6 @@
     float: right; }
 
 .google-form {
-  background: #eee;
-  padding: 4px 4px 0 4px;
-  width: 849px; }
+  background: rgba(34, 174, 200, 0.9);
+  padding: 5px 0 0 0;
+  width: 630px; }
