--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -89,7 +89,7 @@
 }
 
 .google-form{
-  background: #eee;
-  padding: 4px 4px 0 4px;
-  width:849px;
+  background: rgba(34, 174, 200, 0.9);
+  padding: 5px 0 0 0;
+  width:630px;
 }
