--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
         <li class="dropdown a3" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supporters<b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="/members">Members</a></li>
+          <li><a href="/members/overview">Members</a></li>
           <li><a href="/endorsements">Endorsements</a></li>
           <li><a href="/local-chapters">Local Groups</a></li>
           <li><a href="/media">Media Coverage</a></li>
