--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -16,6 +16,21 @@
         .row
           .col-sm-3.col-xs-6.profile
             .text-center
+              = image_tag("/assets/front_page/people/Haydn.png")
+            %p
+              "80,000 Hours' coaching completely changed my career plans with their tailored and actionable research."
+            %h4
+              Haydn Belfield, Development Officer
+          .col-sm-3.col-xs-6.profile
+            .text-center
+              = image_tag("/assets/community/overview/julia-wise.png")
+            %p
+              "I support 80,000 Hours because I wish I had been thinking about effective career choice starting a lot earlier. 80,000 Hours is exactly the kind of resource I wish had been around then!"
+            %h4
+              Julia Wise, Social Worker
+
+          .col-sm-3.col-xs-6.profile
+            .text-center
               = image_tag("/assets/front_page/people/jen.png")
             %p
               "I will totally have a quote here as soon as it's sent to Ozzie!"
@@ -28,21 +43,6 @@
               "I will also totally have a quote here as soon as it's sent to Ozzie!"
             %h4
               Mia George, Analyst
-          .col-sm-3.col-xs-6.profile
-            .text-center
-              = image_tag("/assets/community/overview/julia-wise.png")
-            %p
-              "I support 80,000 Hours because I wish I had been thinking about effective career choice starting a lot earlier. 80,000 Hours is exactly the kind of resource I wish had been around then!"
-            %h4
-              Julia Wise, Social Worker
-          .col-sm-3.col-xs-6.profile
-            .text-center
-              = image_tag("/assets/front_page/people/Haydn.png")
-            %p
-              "I think I have a quote, but Ozzie doesn't know where it is.  It should be sent to Ozzie!"
-            %h4
-              Haydn Belfield, Development Officer
-
 
   .section.core-concepts
     .container
