--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -22,11 +22,12 @@ footer {
   margin-left: auto;
   margin-right: auto; }
   footer p {
-    font-size: 0.8em; }
+    font-size: 0.8em;
+    line-height: 130%; }
   footer .menu {
     padding-bottom: 10px; }
   footer hr {
-    border-color: #555555;
+    border-top: 3px solid #3E6666;
     margin-bottom: 10px; }
   footer .logo {
     float: left;
@@ -42,21 +43,24 @@ footer {
   footer ul {
     float: left;
     list-style-type: none;
-    padding-right: 20px;
+    padding-right: 40px;
     padding-left: 0px;
     min-width: 8%;
-    max-width: 16%; }
+    max-width: 25%; }
     footer ul li.heading {
-      font-size: 1.1em;
-      padding-bottom: 10px; }
+      font-family: 'Muli', sans serif;
+      font-size: 1.3em;
+      font-weight: 200;
+      padding-bottom: 10px;
+      color: #D3D3D3; }
       footer ul li.heading a {
         color: #dbe1e1; }
       footer ul li.heading a:hover {
         color: #40bcd1; }
-    footer ul li {
-      font-size: 0.8em; }
-      footer ul li a {
-        color: #7b7f80; }
+    footer ul li a {
+      color: #7b7f80; }
+  footer .disclaimer {
+    padding: 15px 0; }
   footer .charity {
     margin-top: 10px;
     margin-bottom: 30px; }
