--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -39,12 +39,15 @@
   .home .people-say .profile {
     padding: 0 26px; }
     .home .people-say .profile p {
-      color: #333;
-      font-size: 18px; }
+      color: #316B7E;
+      font-family: 'Muli', sans serif;
+      font-size: 1.2em;
+      line-height: 150%;
+      padding-bottom: 10px; }
     .home .people-say .profile h4 {
-      font-size: 14px;
-      color: #000;
-      font-family: 'Muli', sans-serif; }
+      color: #40A3AC;
+      font-family: "Muli",sans-serif;
+      font-size: 1.1em; }
     .home .people-say .profile img {
       width: 210px;
       margin-bottom: 18px; }
@@ -70,15 +73,18 @@
       text-align: justify;
       color: #666; }
 .home .affiliations {
-  background: #ccc;
+  background: linear-gradient(45deg, rgba(220, 230, 233, 0.9), rgba(247, 253, 253, 0.9));
+  box-shadow: inset 0 2px 1px rgba(102, 124, 126, 0.1);
   padding: 65px 0 55px 0;
-  box-shadow: inset 0 2px 1px rgba(50, 50, 50, 0.1); }
+  box-shadow: inset 0 2px 1px rgba(50, 50, 50, 0.1);
+  color: #316B7E; }
   .home .affiliations hr {
-    border-top: 2px solid #999; }
+    border-top: 2px solid #ADD0DB; }
   .home .affiliations .organizations img {
-    width: 122px; }
+    width: 122px;
+    border: 5px solid #ADD0DB; }
   .home .affiliations .organizations hr.dashed {
-    border-top: 2px dashed #999; }
+    border-top: 2px dashed #ADD0DB; }
   .home .affiliations .media img {
     max-height: 36px;
     margin: 0 11px; }
