--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -52,13 +52,16 @@
     .profile{
       padding: 0 26px;
       p{
-        color: #333;
-        font-size:18px;
+        color: #316B7E;
+        font-family: 'Muli', sans serif;
+        font-size: 1.2em;
+        line-height: 150%;
+        padding-bottom:10px;
       }
       h4{
-        font-size:14px;
-        color:#000;
-        font-family:'Muli', sans-serif;
+        color: #40A3AC;
+        font-family: "Muli",sans-serif;
+        font-size: 1.1em;
       }
       img{
         width:210px;
@@ -96,18 +99,21 @@
     }
   }
   .affiliations{
-      background: #ccc;
+      background: linear-gradient(45deg, rgba(220, 230, 233, 0.9), rgba(247, 253, 253, 0.9));
+      box-shadow: inset 0 2px 1px rgba(102, 124, 126, 0.1);
       padding: 65px 0 55px 0;
       box-shadow: inset 0 2px 1px rgba(50,50,50,0.1);
+      color: #316B7E;
     hr{
-      border-top: 2px solid #999;
+      border-top: 2px solid #ADD0DB;
     }
     .organizations{
       img{
         width:122px;
+        border: 5px solid #ADD0DB;
       }
       hr.dashed{
-        border-top: 2px dashed #999;
+        border-top: 2px dashed #ADD0DB;
       }
     }
     .media{
