--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -12,6 +12,38 @@
   margin-bottom: 2px;
   padding-bottom: 0px; }
 
+.endorsements blockquote {
+  margin-left: 30px;
+  margin: 0 0 14px 30px;
+  background: url("/assets/pages/testimonials/220-16.png") left top no-repeat, url("/assets/pages/testimonials/220-16r.png") bottom right no-repeat;
+  border-left: none; }
+.endorsements blockquote p {
+  font-family: 'Muli', sans serif;
+  font-size: 1.3em;
+  font-weight: 300;
+  line-height: 170%;
+  padding: 8px 20px; }
+.endorsements .position {
+  font-family: 'Muli', sans serif;
+  font-size: 1.1em;
+  color: #999; }
+.endorsements .author {
+  font-family: 'Muli', sans serif;
+  font-size: 1.7em; }
+.endorsements .endorsement {
+  padding: 35px 0px; }
+.endorsements img {
+  float: left;
+  margin-right: 12px;
+  width: 52px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  opacity: 0.5;
+  margin-left: 7px; }
+.endorsements hr {
+  border-top: 1px dotted #eee; }
+
 .coaching-navigation {
   padding-right: 22px; }
   .coaching-navigation h1 a {
@@ -22,14 +54,14 @@
     margin-top: 25px;
     font-size: 1.5em; }
     .coaching-navigation h2 a {
-      color: rgba(255, 255, 255, 0.6); }
+      color: rgba(255, 255, 255, 0.8); }
       .coaching-navigation h2 a:hover {
         color: white;
         text-decoration: none; }
 
 .coaching-page .back-large {
   padding: 38px 0 32px 0;
-  background: linear-gradient(45deg, rgba(54, 174, 205, 0.4), rgba(40, 233, 165, 0.4)); }
+  background: linear-gradient(45deg, rgba(34, 144, 175, 0.3), rgba(91, 198, 207, 0.3)); }
   .coaching-page .back-large .img {
     width: 97%;
     text-align: center;
@@ -41,7 +73,8 @@
       font-size: 1.35em;
       margin-top: 14px;
       color: #222;
-      line-height: 1.3em; }
+      line-height: 160%;
+      color: #316B7E; }
     .coaching-page .back-large .summary .buttons {
       text-align: center; }
     .coaching-page .back-large .summary .btn-default {
