--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       </div>
     </div>
     <hr>
-    <div>
+    <div class="disclaimer">
       <p>
             We can give you information about your career options that we hope is useful. But, at the end of the day, how you choose to use this information is up to you. <strong>We can't take responsibility for the outcomes of your choices.</strong> Our advisors are not professionally qualified career counsellors or advisors. We recommend you use our advice alongside someone professionally qualified.
             </p>
