--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -32,37 +32,6 @@
           %p He leads the management of the content development team, as well as our impact evaluation.
           %a{href: "mailto:roman.duda@80000hours.org"} roman.duda@80000hours.org
 
-
-  .row
-    .col-md-4.member
-      .row
-        .col-md-12
-          = image_tag("/assets/pages/team/ThomasHendrey.jpg")
-      .row
-        .col-md-12
-          %h2.name Thomas Henry - Researcher
-          %p Roman did a fully-funded Masters in Philosophy at Oxford, during which he also consulted for a top 30 FTSE company on their business strategy, whilst also studying Mandarin Chinese. With a strong interest in Quantified Self, he has worked at the start-ups Memrise and Self Spark.
-          %p He leads the management of the content development team, as well as our impact evaluation.
-          %a{href: "mailto:roman.duda@80000hours.org"} roman.duda@80000hours.org
-
-    .col-md-4.member
-      .row
-        .col-md-12
-          = image_tag("/assets/pages/team/Collin.jpg")
-      .row
-        .col-md-12
-          %h2.name Collin O'Rourke - Researcher
-          %p Tom provides manages finances, legal and logistics shared 50% with Giving What We Can. After completing the BPhil in Philosophy at Oxford, he worked for 5 years as a professional web-developer at a variety of non-profits, including the New Internationalist.
-
-    .col-md-4.member
-      .row
-        .col-md-12
-          = image_tag("/assets/pages/team/OzzieGooen.jpg")
-      .row
-        .col-md-12
-          %h2.name Ozzie Gooen - Web Developer
-          %p Isaac recently graduated with a First in Computer Science from Warwick University. He works on improving our website and ensuring things run smoothly!
-          %a{href: "mailto:isaac.lewis@80000hours.org"} isaac.lewis@80000hours.org
   .row
     .col-md-4.member
       .row
@@ -72,18 +41,39 @@
         .col-md-12
           %h2.name Tom Ash – Director of Operations
           %p Tom provides manages finances, legal and logistics shared 50% with Giving What We Can. After completing the BPhil in Philosophy at Oxford, he worked for 5 years as a professional web-developer at a variety of non-profits, including the New Internationalist.
-  <hr>
-  %h1#our_advisors Our Advisors
+    .col-md-4.member
+      .row
+        .col-md-12
+          = image_tag("/assets/pages/team/ThomasHendrey.jpg")
+      .row
+        .col-md-12
+          %h2.name Thomas Henry - Researcher
+          %p Thomas graduated from Monash University, Australia with a first class honours in Mathematics and Philosophy, coming top in his year in philosophy and statistics. He does research for our case studies and website content and is currently researching into entrepreneurship as a high impact career.
+          %a{href: "mailto:thomas.hendrey@80000hours.org"} thomas.hendrey@80000hours.org
+
+    .col-md-4.member
+      .row
+        .col-md-12
+          = image_tag("/assets/pages/team/Collin.jpg")
+      .row
+        .col-md-12
+          %h2.name Collin O'Rourke - Case Study Manager
+          %a{href: "mailto:collin.orourke@80000hours.org"} collin.orourke@80000hours.org
+
+
   .row
     .col-md-4.member
       .row
         .col-md-12
-          = image_tag("/assets/pages/team/TobyOrd.jpg")
+          = image_tag("/assets/pages/team/OzzieGooen.jpg")
       .row
         .col-md-12
-          %h2.name Niel Bowerman
-          %p Niel has six years of experience in climate advocacy, during which he was on Obama’s 2008 Environment Policy Team, adviser to the President of the Maldives, founder of Climatico and named a Young Global Shaper by the World Economic Forum.
-
+          %h2.name Ozzie Gooen - Web Developer
+          %a{href: "mailto:ozzie.gooen@80000hours.org"} ozzie.gooen@80000hours.org
+          
+  <hr>
+  %h1#our_advisors Our Advisors
+  .row
     .col-md-4.member
       .row
         .col-md-12
@@ -95,11 +85,20 @@
     .col-md-4.member
       .row
         .col-md-12
-          = image_tag("/assets/pages/team/TobyOrd.jpg")
+          = image_tag("/assets/pages/team/paul.png")
       .row
         .col-md-12
           %h2.name Paul Christiano
           %p While a PhD candidate in Computer Science at Berkeley, Paul co-founded SPARC, which introduces the US’s top young mathematicians to how they can contribute to solving real world problems.
+    .col-md-4.member
+      .row
+        .col-md-12
+          .empty-picture
+      .row
+        .col-md-12
+          %h2.name Niel Bowerman
+          %p Niel has six years of experience in climate advocacy, during which he was on Obama’s 2008 Environment Policy Team, adviser to the President of the Maldives, founder of Climatico and named a Young Global Shaper by the World Economic Forum.
+
 
   <hr>
   %h1#community Community
