fixed coaching page issues

--- a/app/views/pages/coaching_application.html.haml
+++ b/app/views/pages/coaching_application.html.haml
@@ -1,14 +1,30 @@
 .row.coaching-info-page
   .col-md-7
-    %h2 What we're looking for
-    %p 
-      We are looking for incredibly hard working and dedicated individuals who will be able to make the most use of our advice.  This is particularly for people deciding between different long-term decisions, where we may be able to help recommend the better of the two after significant research.
+    %h1 The Application Process
+    %p We assess applications at the end of each month. We receive many applications each day, and unfortunately only currently have the capacity to speak to less than 10% of applicants. 
+    %p If you don’t get through this time, please do apply again in the future when we may have more capacity. 
+    %hr
 
-    %h2 What we ask from you
-    %ol
-      %li Read our recommended material first
-      %li Commit to at least 15 hours of researching your own career during our coaching week
-      %li Provide extensive feedback and recommendations on how we're doing.  We're serious about becoming better and need your help for this.
+    %h1 What we're looking for
+    %p We aim to speak to the people we can help the most to have a positive impact. Ideal candidates--those we believe will get the most out of a coaching relationship with us are:
+    %li deeply socially motivated
+    %li high achieving
+    %li open minded about how best to have an impact
+    %li interested in high priority causes
+    %li favor strategic, data-driven approaches to making decisions
+    %li have questions that we can make progress on in the time available and are likely to be relevant to others
+    %li have time to dedicate to the coaching process and thinking about their career
+
+    %br
+    %p To find out more about our application criteria, see our <a href="http://80000hours.org/blog/250-team-plan"> 6 month review</a>.
+    %hr
+
+    %h1 What we ask from you
+    %li Familiarity with our basic ideas and existing research relevant to your situation. In particular, our <a href="http://80000hours.org/blog/149-the-best-resources-for-planning-your-career"> best resources list</a>.
+    %li Able to commit to several 1-2h meetings with our coaches and at least 1-2 hours of preparatory work.
+    %li Willing to provide feedback and recommendations on how we're doing. We're serious about improving and need your help to do so.
+    %hr
+
     = link_to 'Apply Now', '/request-a-career-advice-session', :class => 'btn btn-large btn-primary'
       
   .col-md-1
