--- a/app/views/pages/coaching_overview.html.haml
+++ b/app/views/pages/coaching_overview.html.haml
@@ -5,7 +5,7 @@
         .col-sm-6
           .summary
             %h2
-              You probably have many options open to you, and in some you’ll have far more impact than others. It can be tough to know which to choose. 
+              You have many options open to you, and you’ll have far more impact in some than others. It can be tough to know which to choose.
             %h2
               We’re the only people in the world who specialise in helping you work out how to maximise your social impact: finding out how to improve the lives of as many people as possible, in the biggest ways, over the long-term.
             .buttons
@@ -20,27 +20,28 @@
           .text-center
             = image_tag("/assets/pages/coaching/icons/165.png")
             %h2
-              One-to-one Meetings
+              One-to-one Coaching 
           %p
-            We'll have a few 1-2 hour meetings to get to know you and understand your concerns.  
+            Over a series of meetings, our coaches will help you structure your decision, clarify your plans and options, and identify actionable next steps.
         .col-sm-3.item
           .text-center
             = image_tag("/assets/pages/coaching/icons/272.png")
             %h2
-              Individualised Research
+              Our Expertise
           %p 
-            Our staff will spend several hours researching the literature behind each of your main career options to help you make the best choice.
+            Our team and advisors will apply their knowledge of the effectiveness of different causes and the opportunities within different careers to your situation.
         .col-sm-3.item
           .text-center
             = image_tag("/assets/pages/coaching/icons/124.png")
             %h2
-              Personal Documentation
+              Personalized Research
           %p 
-            We'll document all of our discussions and research in our Case Studies, which will be accessible to the entire community.
+            We'll carry out 1-4 days of personalised research into the questions that matter most to your career decisions, presenting you with a complete write up and record of all conversations.
+            
         .col-sm-3.item
           .text-center
             = image_tag("/assets/pages/coaching/icons/152.png")
             %h2
-              The Altruist Community
+              Quality Connections
           %p 
-            If reasonable, we'll match you with others of similar values that may be able to help you in your personal journey.
+            Wherever possible, we'll introduce you to other people in our community who can help you make a difference in your career.
