--- a/app/views/pages/coaching_information.html.haml
+++ b/app/views/pages/coaching_information.html.haml
@@ -1,10 +1,15 @@
 .row.coaching-info-page
   .col-md-7
-    %h2 What we can do
-    %p Comparing several options and wondering where, given your personal situation, you can make the most impact? It’s likely that one of your options has far more potential than the others. We’ll help you decide. First, we’ll help you create a list of important factors, then we’ll gather data and interview experts to assess them. We’ll introduce you to other people who have been in your shoes before.
-    %p Just want to use your talents to make an impact, but not sure where to start? We’ll make personalised suggestions on how you can help solve the most pressing problems in the world, and help you fit these suggestions into a career plan.
-    %p Have a difficult question about your social impact? We’ll do in-depth research into the question, and help you update your career plans based on the answers.
-    %h2 The Coaching Process
+    %h1 What we can do
+    %h3 Comparing several options and wondering where, given your personal situation, you can make the most impact? 
+    %p It’s likely that one of your options has far more potential than the others. We’ll help you decide. First, we’ll help you create a list of important factors, then we’ll gather data and interview experts to assess them. We’ll introduce you to other people who have been in your shoes before.
+    %h3 Just want to use your talents to make an impact, but not sure where to start? 
+    %p We’ll make personalised suggestions on how you can help solve the most pressing problems in the world, and help you fit these suggestions into a career plan.
+    %h3 Have a difficult question about your social impact? 
+    %p We’ll do in-depth research into the question, and help you update your career plans based on the answers.
+    <hr>
+
+    %h1 The Coaching Process
 
     %ol
       %li You tell us about your current plans, your situation and your questions.
@@ -16,8 +21,21 @@
       %li You’ll send us feedback on the process and ask how your plans have changed. This helps us to monitor our impact and improve our service. We’ll also publish our research on the blog, so that others can benefit from it (we guarantee no personal details will be shared that you don’t want to be shared).
       %li We’ll give you the option of follow up sessions and staying in touch. Our coachees often end up as friends who we stay in touch with for years!
 
-    %h2 Payment
-    %p Coaching is currently free. It’s paid for by several generous benefactors.
+    <hr>
+
+    %h1 The 80,000 Hours Approach
+    %h3 Maximising Impact
+    %p  Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+    %h3 Evidence-Based
+    %p It’s difficult to know which paths to making a difference really work. That’s why we work with academics at Oxford and leaders in prioritisation research, and base our findings on our own in-depth research.
+    %h3 Replaceability
+    %p Some common ways to make a difference, like becoming a doctor, don’t make as much difference as you might first think. That’s because many doctors and other professionals are replaceable. We seek out the opportunities that have the greatest true impact.
+    <hr>
+
+    %h1 Payment
+    %p It’s completely free! Due to the donations of several generous benefactors, we are able to provide a limited number of free coaching sessions as a pilot program, with the aim of generating insights that will prove useful to thousands of people.
+    %p We rely on donations to continue operating, so although the coaching is free, we really appreciate any support you might be able to lend.
+
   .col-md-1
   .col-md-4
     .sidebar-image
