new testimonials on homepage

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -31,18 +31,18 @@
 
           .col-sm-3.col-xs-6.profile
             .text-center
-              = image_tag("/assets/front_page/people/jen.png")
+              = image_tag("/assets/front_page/people/brayden.png")
             %p
-              "I will totally have a quote here as soon as it's sent to Ozzie!"
+              "80,000 Hours' research gave me the motivation to research careers internationally.  I've since improved my career path and have become far more productive."
             %h4
-              Mia George, Analyst
+              Brayden McLean, Engineer and Consultant
           .col-sm-3.col-xs-6.profile
             .text-center
-              = image_tag("/assets/front_page/people/jen.png")
+              = image_tag("/assets/front_page/people/Karolina.png")
             %p
-              "I will also totally have a quote here as soon as it's sent to Ozzie!"
+              "80,000 Hours has completely changed my view on how to connect one's passions with one's moral framework in this fast-paced century."
             %h4
-              Mia George, Analyst
+              Karolina Richterova, Experimental Psychology Graduate Student
 
   .section.core-concepts
     .container
