--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -93,7 +93,8 @@
     .col-md-4.member
       .row
         .col-md-12
-          .empty-picture
+          = image_tag("/assets/pages/team/niel.png")
+            
       .row
         .col-md-12
           %h2.name Niel Bowerman
