--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -41,13 +41,14 @@
     .home .people-say .profile p {
       color: #316B7E;
       font-family: 'Muli', sans serif;
-      font-size: 1.2em;
+      font-size: 1.1em;
       line-height: 150%;
       padding-bottom: 10px; }
     .home .people-say .profile h4 {
       color: #40A3AC;
       font-family: "Muli",sans-serif;
-      font-size: 1.1em; }
+      font-size: 1.1em;
+      line-height: 1.4em; }
     .home .people-say .profile img {
       width: 210px;
       margin-bottom: 18px; }
