--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -54,7 +54,7 @@
       p{
         color: #316B7E;
         font-family: 'Muli', sans serif;
-        font-size: 1.2em;
+        font-size: 1.1em;
         line-height: 150%;
         padding-bottom:10px;
       }
@@ -62,6 +62,7 @@
         color: #40A3AC;
         font-family: "Muli",sans-serif;
         font-size: 1.1em;
+        line-height:1.4em;
       }
       img{
         width:210px;
