--- a/app/views/pages/coaching_application.html.haml
+++ b/app/views/pages/coaching_application.html.haml
@@ -1,6 +1,6 @@
 .row.coaching-info-page
   .col-md-7
-    %h1 The Application Process
+    %h1 The application process
     %p We assess applications at the end of each month. We receive many applications each day, and unfortunately only currently have the capacity to speak to less than 10% of applicants. 
     %p If you don’t get through this time, please do apply again in the future when we may have more capacity. 
     %hr
