--- a/app/views/pages/coaching_information.html.haml
+++ b/app/views/pages/coaching_information.html.haml
@@ -1,6 +1,6 @@
 .row.coaching-info-page
   .col-md-7
-    %h1 What we can do
+    %h1 What can we help you with?
     %h3 Comparing several options and wondering where, given your personal situation, you can make the most impact? 
     %p It’s likely that one of your options has far more potential than the others. We’ll help you decide. First, we’ll help you create a list of important factors, then we’ll gather data and interview experts to assess them. We’ll introduce you to other people who have been in your shoes before.
     %h3 Just want to use your talents to make an impact, but not sure where to start? 
@@ -9,7 +9,7 @@
     %p We’ll do in-depth research into the question, and help you update your career plans based on the answers.
     <hr>
 
-    %h1 The Coaching Process
+    %h1 The coaching process
 
     %ol
       %li You tell us about your current plans, your situation and your questions.
@@ -32,9 +32,12 @@
     %p Some common ways to make a difference, like becoming a doctor, don’t make as much difference as you might first think. That’s because many doctors and other professionals are replaceable. We seek out the opportunities that have the greatest true impact.
     <hr>
 
-    %h1 Payment
+    %h1 How much does it cost?
     %p It’s completely free! Due to the donations of several generous benefactors, we are able to provide a limited number of free coaching sessions as a pilot program, with the aim of generating insights that will prove useful to thousands of people.
     %p We rely on donations to continue operating, so although the coaching is free, we really appreciate any support you might be able to lend.
+    
+    = link_to 'Application', '/coaching/application', :class => 'btn btn-large btn-primary'
+      
 
   .col-md-1
   .col-md-4
