--- a/app/views/pages/coaching_overview.html.haml
+++ b/app/views/pages/coaching_overview.html.haml
@@ -42,6 +42,6 @@
           .text-center
             = image_tag("/assets/pages/coaching/icons/152.png")
             %h2
-              Quality Connections
+              Connections
           %p 
             Wherever possible, we'll introduce you to other people in our community who can help you make a difference in your career.
