--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -69,6 +69,7 @@
       .row
         .col-md-12
           %h2.name Ozzie Gooen - Web Developer
+          Ozzie makes the website work well.
           %a{href: "mailto:ozzie.gooen@80000hours.org"} ozzie.gooen@80000hours.org
           
   <hr>
@@ -93,7 +94,7 @@
     .col-md-4.member
       .row
         .col-md-12
-          = image_tag("/assets/pages/team/niel.png")
+          = image_tag("/assets/pages/team/NeilFinal.jpg")
             
       .row
         .col-md-12
