--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -69,7 +69,8 @@
       .row
         .col-md-12
           %h2.name Ozzie Gooen - Web Developer
-          Ozzie makes the website work well.
+          %p Ozzie has spent the last year in San Francisco cofounding a web startup.  Before that he studied engineering at Harvey Mudd College in California.  He works on web application development.
+          
           %a{href: "mailto:ozzie.gooen@80000hours.org"} ozzie.gooen@80000hours.org
           
   <hr>
