--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,11 +1,11 @@
 .home .background {
-  background: linear-gradient(70deg, #2290af, #10cba5 100%);
+  background: linear-gradient(70deg, #2299df, #10cfd5 100%);
   /* W3C */ }
 .home .cta-section {
   padding: 45px 0 61px 0; }
   .home .cta-section h1 {
-    font-size: 74px;
-    margin-bottom: 74px;
+    font-size: 45px;
+    margin-bottom: 54px;
     color: white;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); }
   .home .cta-section h2 {
@@ -29,7 +29,7 @@
         background: rgba(250, 250, 250, 0.2); }
     .home .cta-section .buttons .cta.primary {
       background: rgba(255, 255, 255, 0.9);
-      color: #055; }
+      color: #035; }
       .home .cta-section .buttons .cta.primary:hover {
         background: rgba(250, 250, 250, 0.5); }
 .home .people-say {
