--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,6 @@
 .home{
   .background{
-    background: linear-gradient(70deg, #2290af,#10cba5 100%); /* W3C */
+    background: linear-gradient(70deg, #2299df, #10cfd5 100%); /* W3C */
   }
 
   .cta-section{
@@ -8,8 +8,8 @@
     //background-image: url("/assets/front_page/patterns/test-10-large.png");
     padding:45px 0 61px 0;
     h1{
-      font-size:74px;
-      margin-bottom:74px;
+      font-size:45px;
+      margin-bottom:54px;
       color:white;
       text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
     }
@@ -38,7 +38,7 @@
       }
       .cta.primary{
         background: rgba(255,255,255,0.9);
-        color: #055;
+        color: #035;
         &:hover{
           background: rgba(250, 250, 250, 0.5);
         }
