--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -6,6 +6,10 @@ a:hover{
   color: #003399;
 }
 
+body{
+  color: #555;
+  font-size:16px;
+}
 #content{
   padding-top:20px;
   padding-bottom:22px;
