--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,14 +3,14 @@
     .section.cta-section
       .container
         %h1.text-center
-          You’ve got 80,000 hours to </br> make a difference. 
+          You’ve got 80,000 hours to make a difference. 
         %h2.text-center
           Don't let them go to waste. Our free coaching and research helps you find the causes and careers in which you can make the biggest impact.
         .row.buttons
           .col-md-4.col-md-offset-2
             = link_to 'Get Career Coaching', '/coaching/overview', class: "btn btn-large secondary cta"
           .col-md-3
-            = link_to 'Read Our Research', '/our-findings', class: "btn btn-large primary cta"
+            = link_to 'Read Our Research', '/research', class: "btn btn-large primary cta"
     .section.people-say
       .container
         .row
@@ -28,21 +28,21 @@
               "I support 80,000 Hours because I wish I had been thinking about effective career choice starting a lot earlier. 80,000 Hours is exactly the kind of resource I wish had been around then!"
             %h4
               Julia Wise, Social Worker
+          .col-sm-3.col-xs-6.profile
+            .text-center
+              = image_tag("/assets/front_page/people/jess.png")
+            %p 
+              "I genuinely don't think there's a better place in the world to go to if you want to make a difference with your career."
+            %h4
+              Jess Whittlestone, Psychology Ph.D Student
+          .col-sm-3.col-xs-6.profile
+            .text-center
+              = image_tag("/assets/front_page/people/boris.png")
+            %p
+              "80,000 Hours shares a clear-headed approach to making the biggest positive difference in the world"
+            %h4
+              Boris Yakubchik, Maths Teacher
 
-          .col-sm-3.col-xs-6.profile
-            .text-center
-              = image_tag("/assets/front_page/people/brayden.png")
-            %p
-              "80,000 Hours' research gave me the motivation to research careers internationally.  I've since improved my career path and have become far more productive."
-            %h4
-              Brayden McLean, Engineer and Consultant
-          .col-sm-3.col-xs-6.profile
-            .text-center
-              = image_tag("/assets/front_page/people/Karolina.png")
-            %p
-              "80,000 Hours has completely changed my view on how to connect one's passions with one's moral framework in this fast-paced century."
-            %h4
-              Karolina Richterova, Experimental Psychology Graduate Student
 
   .section.core-concepts
     .container
@@ -56,21 +56,21 @@
             %h2
               Maximizing Impact
           %p
-            Some of the paths open to you have far more impact than others.  That's why we aim to seek out the most high impact opportunities in the world, and help you take them.
+            Some of the paths open to you have <a href="http://80000hours.org/blog/94-how-to-do-one-year-of-work-in-four-hours">far more impact than others</a>. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
         .col-md-4.item
           .text-center
             = image_tag("/assets/front_page/icons/blue/272.png")
             %h2
               Evidence-Based
           %p
-            It's difficult to know which ways to make a difference really work.  That's why we work with academics and leaders in prioritisation research, and our findings are based on in-depth research.
+            It’s <a href="http://80000hours.org/blog/66-social-interventions-gone-wrong">difficult to know</a> which paths to making a difference really work. That’s why we work with academics at Oxford and leaders in prioritisation research, and base our findings on our own in-depth research.
         .col-md-4.item
           .text-center
             = image_tag("/assets/front_page/icons/blue/123.png")
             %h2
-              Replacability
+              Replaceability
           %p
-            Some common ways to make a difference, like becoming a doctor, don't make as much difference as you might first think.  That's because many doctors are replaceable.  We seek out the opportunities that have a true impact.
+            Some common ways to make a difference, like <a href="http://80000hours.org/blog/72-how-many-lives-does-a-doctor-save">becoming a doctor</a>, don’t make as much difference as you might first think. That’s because the work of many doctors and other professionals is replaceable. We seek out the opportunities that have the greatest <a href="http://80000hours.org/blog/112-what-s-your-true-impact">true impact</a>.
       %h1.text-center
         Main Research
       .row
@@ -80,22 +80,21 @@
             %h2
               Best Causes
           %p
-            How can you go about working out in which causes you can have the most impact? Start using our framework for assessing causes.
+            How can you go about working out in which causes you can have the most impact? Start using <a href="/research">our framework</a> for assessing causes.
         .col-md-4.item
           .text-center
             = image_tag("/assets/front_page/icons/blue/247.png")
             %h2
               Best Careers
           %p
-            What are your most high impact career opportunities? Start using our framework for assessing careers.
+            What are your most high impact career opportunities? Start using <a href="http://80000hours.org/blog/238-how-to-assess-the-impact-of-a-career">our framework</a> for assessing careers.
         .col-md-4.item
           .text-center
             = image_tag("/assets/front_page/icons/blue/101.png")
             %h2
               Planning Process
           %p
-            Having trouble tying it all together? Start by using our career model. (And we won’t just tell you do to ‘do what you’re passionate about.’)
-
+            Having trouble tying it all together? Start by using our <a href="http://80000hours.org/blog/241-introduction-to-our-career-model">career model</a>. (And we won’t just tell you do to <a href="http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world">‘do what you’re passionate about.’</a>)
 
   .section.affiliations
     .container
